[gd_scene load_steps=9 format=2]

[ext_resource path="res://Singletons/DialogueManager/DialogueManager.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Test_Art/Christian_Test_Assets/Text_Scroll_SFX (1).wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/UI/Dialogue/Dialogue_Box_Mockup_02.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/ChunkyPixels.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/UI/SelectionUI/AutoSelection.gd" type="Script" id=5]
[ext_resource path="res://Assets/Art/Test_Art/Christian_Test_Assets/Option_Selected.wav" type="AudioStream" id=6]
[ext_resource path="res://Singletons/DialogueManager/DialogueOption.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="OptionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue Box" type="Sprite" parent="Control"]
texture = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Dialogue Box"]
margin_left = -143.066
margin_top = -25.007
margin_right = 141.934
margin_bottom = 19.993
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Hi, I am [color=#FF0000]Red[/color] and I am [color=#0000FF]Blue[/color]"
text = "Hi, I am Red and I am Blue"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsBox" type="Control" parent="Control"]
margin_left = -0.314941
margin_top = -68.0358
margin_right = 39.6851
margin_bottom = -28.0358
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionBG" type="Sprite" parent="Control/OptionsBox"]
scale = Vector2( 1.00207, 1 )
texture = ExtResource( 3 )

[node name="OptionList" type="Control" parent="Control/OptionsBox"]
margin_left = -142.685
margin_top = -25.9642
margin_right = -102.685
margin_bottom = 14.0358
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
wrap_around = true
no_initial_selection = true
hide_on_accept = true
quick_scroll_enabled = true
selectable_scene = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/OptionsBox/OptionList"]
margin_right = 292.0
margin_bottom = 51.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option0" parent="Control/OptionsBox/OptionList/VBoxContainer" instance=ExtResource( 7 )]
